# wahlomat-extended-analysis

./: .gitignore  .pre-commit-config.yaml  .~lock.2026-03-24 Wahl-O-Mat-Datens則ze.xlsx#  ANALYSIS_GUIDE_DE.md  ANALYSIS_GUIDE_EN.md  LICENSE  README.md  analysis.py  bpb_urls.py  build_dataframe.py  build_graphs_from_csv.py  build_metadata.py  election_id_policy.py  election_metadata.csv  failed_analysis.py  get_zip_files.py  graph_kinds.py  load_modules.py  mito-starter-notebook.ipynb  pyproject.toml  requirements.txt  skipped_elections.py  update_excel_csv.py  wahlomat.py  wahlomat2021.ipy  wahlomat2021.py
.github/workflows/: architecture-doc.yml  cli-contracts.yml  quality.yml
data_backup/: .wahlomat_refresh_state.json
data_backup/2026-03-24 Wahl-O-Mat-Datens則ze/: [Content_Types].xml
docs/: ANALYSIS_GUIDE_DE.md  ANALYSIS_GUIDE_EN.md  ARCHITECTURE.md  DATASET.md  DEVELOPMENT.md  PIPELINE_REFERENCE.md  README.md  TROUBLESHOOTING.md  USAGE.md
legacy/: load_modules.py
tests/: test_analysis_edges.py  test_build_graphs_from_csv.py  test_cli_help_paths.py  test_discover_bpb_excel.py  test_get_zip_files_datensaetze_only.py  test_get_zip_files_filter.py  test_get_zip_files_full_download_extract_scope.py  test_refresh_excel_state.py  test_update_excel_csv_content_hash.py
tools/: gen_architecture.py  gen_cli_contracts.py
wahlomat_extended_analysis/: __init__.py  analysis.py  build_dataframe.py  build_graphs_from_csv.py  build_metadata.py  election_id_policy.py  failed_analysis.py  get_zip_files.py  graph_kinds.py  repo_paths.py  update_excel_csv.py  wahlomat.py
(+678 files in other folders)
